--- a/perceptron_assignment.ipynb
+++ b/perceptron_assignment.ipynb
@@ -97,11 +97,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_perceptron(dataset, max_iterations):\n",
+    "    \n",
+    "    w = {}\n",
+    "    w[0] = "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Task 2. Prove...\n",
     "> Prove that for a linearly separable dataset, the perceptron algorithm will converge. (10 marks)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We first define a hyperplane, and show that any hyperplane $\\in \\Bbb{R}^N$ not intersecting the origin can be mapped to a hyperplane $\\in \\Bbb{R}^{N+1}$ which does intersect the origin; we then give define *linearly separable* in terms of a hyperplane; and we define the *perceptron algorithm* for an origin-intersecting hyperplane. We then prove the convergence of the perceptron algorithm."
    ]
   },
   {
@@ -133,7 +152,8 @@
    "source": [
     "**Definition 2.** A vectorised dataset in an N-dimensional attribute-space is *linearly separable* if there exists a hyperplane $ H $ such that all the points to one side of the hyperplane are of one category, and all the points to the other side are of the other. \n",
     "\n",
-    "Thus, given labels $ y_{i} \\in \\{ 1, -1 \\} $ for each datapoint $ \\mathbf{x}_{i} \\in \\Bbb{R}^{N} $, $ \\exists \\mathbf{n} $ such that $y_{i}(\\mathbf{x}_{i} \\cdot \\mathbf{n} - c) > 0 $. If our hyperplane intersects the origin, then c = 0."
+    "Thus, given labels $ y_{i} \\in \\{ 1, -1 \\} $ for each datapoint $ \\mathbf{x}_{i} \\in \\Bbb{R}^{N} $, $ \\exists \\mathbf{n} $ such that $\\forall \\mathbf{x}_{i}, \\\\ y_{i}(\\mathbf{x}_{i} \\cdot \\mathbf{n}) - c > 0 $.  \n",
+    "If our hyperplane intersects the origin, then c = 0."
    ]
   },
   {
@@ -164,7 +184,7 @@
     "\n",
     "In such a case it is simple to see that we can choose a normal $\\mathbf{n}$ for our hyperplane such that $\\|\\mathbf{n}\\| = 1$.\n",
     "\n",
-    "Given a finite dataset, we must have some point lying closest to the separating hyperplane, such that it minimizes $$ y_{i}(\\mathbf{x}_{i} \\cdot \\mathbf{n} ) = 2 \\gamma >  \\gamma \\in \\Bbb{R} \\tag{1} $$\n",
+    "Given a finite dataset, we must have some point lying closest to the separating hyperplane, such that it minimizes $$ y_{i}(\\mathbf{x}_{i} \\cdot \\mathbf{n} ) = 2 \\epsilon >  \\epsilon \\in \\Bbb{R} \\tag{1} $$\n",
     "\n",
     "We must also have some point furthest from the origin, such that it maximizes $$ \\| \\mathbf{x}_{i} \\| = \\frac{1}{2} R < R \\in \\Bbb{R} \\tag{2}$$"
    ]
@@ -179,7 +199,7 @@
     "\\begin{align}\n",
     "\\mathbf{w}^{k+1} \\cdot \\mathbf{n} &= (\\mathbf{w}^k + y_{j}\\mathbf{x}_{j}) \\cdot \\mathbf{n}  \n",
     "\\\\ &= \\mathbf{w}^k \\cdot \\mathbf{n} + y_{j}(\\mathbf{x}_j \\cdot \\mathbf{n})\n",
-    "\\\\ &> \\mathbf{w}^k \\cdot \\mathbf{n} + \\gamma \\tag{3}\n",
+    "\\\\ &> \\mathbf{w}^k \\cdot \\mathbf{n} + \\epsilon \\tag{3}\n",
     "\\end{align}$$"
    ]
   },
@@ -187,7 +207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If $$ \\mathbf{w}^k  \\cdot \\mathbf{n} > k\\gamma \\tag{4}$$ \n",
+    "If $$ \\mathbf{w}^k  \\cdot \\mathbf{n} > k\\epsilon \\tag{4}$$ \n",
     "for k = 1, then it does $\\forall k \\in \\Bbb{N}$"
    ]
   },
@@ -195,7 +215,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "since (3) + (4)   $$\\begin{align} \\implies \\mathbf{w}^{k+1} \\cdot \\mathbf{n} &> \\mathbf{w}^k \\cdot \\mathbf{n} + \\gamma \\\\ &> k\\gamma + \\gamma = (k+1)\\gamma \\end{align}$$"
+    "since (3) + (4)   $$\\begin{align} \\implies \\mathbf{w}^{k+1} \\cdot \\mathbf{n} &> \\mathbf{w}^k \\cdot \\mathbf{n} + \\epsilon \\\\ &> k\\epsilon + \\epsilon = (k+1)\\epsilon \\end{align}$$"
    ]
   },
   {
@@ -203,7 +223,7 @@
    "metadata": {},
    "source": [
     "and from Definition 3 we know that $$\\mathbf{w}_0 = \\mathbf{0}.$$\n",
-    "so substituting k=0 into (3), with (4) gives us $$\\mathbf{w}^1 > \\mathbf{0} + \\gamma$$ and thus proving (4)."
+    "so substituting k=0 into (3), with (4) gives us $$\\mathbf{w}^1 > \\mathbf{0} + \\epsilon$$ and thus proving (4)."
    ]
   },
   {
@@ -217,7 +237,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "and we know that $$\\|\\mathbf{x} \\| \\| \\mathbf{y} \\| \\ge \\mathbf{x}  \\cdot \\mathbf{y} \\tag{by Cauchy-Schwarz} $$ we therefore have $$\\begin{align} \\|\\mathbf{w}^k \\| = \\|\\mathbf{w}^k \\| \\| \\mathbf{n} \\| &\\ge \\mathbf{w}^k  \\cdot \\mathbf{n}\\\\ &> k\\gamma \\tag{5} \\end{align}$$\n",
+    "and we know that $$\\|\\mathbf{x} \\| \\| \\mathbf{y} \\| \\ge \\mathbf{x}  \\cdot \\mathbf{y} \\tag{by Cauchy-Schwarz} $$ we therefore have $$\\begin{align} \\|\\mathbf{w}^k \\| = \\|\\mathbf{w}^k \\| \\| \\mathbf{n} \\| &\\ge \\mathbf{w}^k  \\cdot \\mathbf{n}\\\\ &> k\\epsilon \\tag{5} \\end{align}$$\n",
     "which gives us a lower bound on $\\|\\mathbf{w}\\|$."
    ]
   },
@@ -248,26 +268,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Putting together (8) and (5) we then have $$\\begin{align} kR^2 &\\ge \\|\\mathbf{w}^{k+1}\\|^2 \\\\ &> ((k+1)\\gamma)^2 \\\\&\\ge (k\\gamma)^2 \\tag{9} \\\\&\\ge k^2\\gamma^2 \\tag{10}\\end{align}$$\n",
+    "Putting together (8) and (5) we then have $$\\begin{align} kR^2 &\\ge \\|\\mathbf{w}^{k+1}\\|^2 \\\\ &> ((k+1)\\epsilon)^2 \\\\&\\ge (k\\epsilon)^2 \\tag{9} \\\\&\\ge k^2\\epsilon^2 \\tag{10}\\end{align}$$\n",
     "\n",
-    "(9) is true, since $\\gamma \\ge 0$ and $k \\in \\Bbb{N}$.\n",
+    "(9) is true, since $\\epsilon \\ge 0$ and $k \\in \\Bbb{N}$.\n",
     "\n",
-    "From (10), we then have a limit on k: $$ k \\le \\frac{R^2}{\\gamma^2} $$ and we are done."
+    "From (10), we then have a limit on k: $$ k \\le \\frac{R^2}{\\epsilon^2} $$ and we are done."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -279,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,16 +381,16 @@
     "    split_data = file_data.split('\\n')\n",
     "\n",
     "    # creat dict to store data\n",
-    "    data = {}\n",
+    "    data = []\n",
     "    for i, datum in enumerate(split_data):\n",
     "        try:\n",
     "            # split the data-vector from the class-label\n",
     "            split = datum.split(',class-')\n",
-    "            label = split[1]\n",
+    "            class_name = split[1]\n",
     "            \n",
     "            # split the elements of the data-vector\n",
     "            list_of_strings = split[0].split(',')\n",
-    "            list_vector = []\n",
+    "            list_vector = [1]\n",
     "            \n",
     "            # convert the elements of the data-vector...\n",
     "            # ... from text strings to floating-point numbers\n",
@@ -396,7 +402,7 @@
     "            vector = np.array(list_vector)\n",
     "            \n",
     "            # load the label and vector into the data dict\n",
-    "            data[i] = (label, vector)\n",
+    "            data.append((class_name, vector))\n",
     "            \n",
     "            if with_print==True:\n",
     "                print(f'Extracted \"{datum}\" to \"{data[i]}\".')\n",
@@ -409,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,12 +432,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def train_perceptron(training_dataset, positive_label, negative_label):\n",
+    "## def"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'train' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-5a90e1dcf6d2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mdef\u001b[0m \u001b[0mtrain_perceptron\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpositive_label\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'1'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnegative_label\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'2'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmax_iterations\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1000\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmax_updates\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m10000\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtraining_dataset\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtrain\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \"\"\"Train Perceptron on given training dataset.\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mArgs\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[0mtraining_dataset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdict\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mDict\u001b[0m \u001b[1;32mwith\u001b[0m \u001b[0minteger\u001b[0m \u001b[0mkeys\u001b[0m \u001b[0mcontaining\u001b[0m \u001b[0mtuples\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'train' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "def train_perceptron(positive_label='1', negative_label='2', max_iterations=1000, max_updates=10000, training_dataset=train):\n",
     "    \"\"\"Train Perceptron on given training dataset.\n",
     "    \n",
     "    Args:\n",
@@ -444,65 +469,46 @@
     "    # find length of dataset vectors\n",
     "    vector_length = len(data[0][1])\n",
     "    \n",
-    "    # initialize weight_vector\n",
-    "    weight_vector = np.zeros(vector_length + 1)\n",
-    "    \n",
-    "    for datum in data:\n",
-    "        label = datum[0]\n",
-    "        vector = datum[1]\n",
+    "    # \n",
+    "    w = {}\n",
     "        \n",
-    "        if cosine_similarity(weight_vector, vector) >= 0:\n",
-    "            perceptron_label = positive_label\n",
+    "    # initialize weight_vector\n",
+    "    w[0] = np.zeros(vector_length)\n",
+    "    \n",
+    "    # label test data\n",
+    "    y = {}\n",
+    "    for i, datum in enumerate(data):\n",
+    "        class_name = datum[0]\n",
+    "        if class_name == positive_label:\n",
+    "            y[i] = 1\n",
+    "        elif class_name == negative_label:\n",
+    "            y[i] = -1\n",
     "        else:\n",
-    "            perceptron_label = negative_label\n",
-    "\n",
-    "        if perceptron_label == label:\n",
-    "            # correctly classified!\n",
-    "            pass\n",
-    "        else:\n",
-    "            # adjust weights and bias\n",
-    "\n",
-    "    return vector_length"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_perceptron(train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('1', array([5.1, 3.5, 1.4, 0.2]))"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train[0]"
+    "            y[i] = 0\n",
+    "    \n",
+    "    k = 0\n",
+    "    count_updates = {}\n",
+    "    for n in range(0, max_iterations):\n",
+    "        \n",
+    "        for i, datum in enumerate(data):\n",
+    "        \n",
+    "            x = datum[1]\n",
+    "            \n",
+    "            if y[i]*(w[k].dot(x)) <= 0:\n",
+    "                # ie. if incorrectly classified\n",
+    "                w[k+1] = w[k] + y[i]*x\n",
+    "                k = k+1\n",
+    "        count_updates[n] = k        \n",
+    "        if n>0 and count_updates[n] == count_updates[n-1]:\n",
+    "            break\n",
+    "        if k == max_updates:\n",
+    "            break\n",
+    "            \n",
+    "    return {'weights':w[k], \n",
+    "            'positive_label':positive_label, \n",
+    "            'negative_label':negative_label,\n",
+    "            'updates':k,\n",
+    "           }"
    ]
   },
   {
@@ -510,25 +516,165 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train_perceptron('2','3')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_perceptron(trained_perceptron, test_dataset=test):\n",
+    "    \n",
+    "    w = trained_perceptron['weights']\n",
+    "    \n",
+    "    # label test dataset\n",
+    "    y = {}\n",
+    "    for i, datum in enumerate(test_dataset):\n",
+    "        class_name = datum[0]\n",
+    "        if class_name == trained_perceptron['positive_label']:\n",
+    "            y[i] = 1\n",
+    "        elif class_name == trained_perceptron['negative_label']:\n",
+    "            y[i] = -1\n",
+    "        else:\n",
+    "            y[i] = 0\n",
+    "    \n",
+    "    results = []\n",
+    "    for i, datum in enumerate(test_dataset):\n",
+    "        x = datum[1]\n",
+    "        if y[i] == 0:\n",
+    "            pass\n",
+    "        elif y[i] * w.dot(x) > 0:\n",
+    "            results.append('right')\n",
+    "        else:\n",
+    "#             print(w)\n",
+    "#             print(datum)\n",
+    "#             print(y[i]*w.dot(x))\n",
+    "            results.append('wrong')\n",
+    "    \n",
+    "    return results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "32.33"
+       "30"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "len(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'wrong',\n",
+       " 'right',\n",
+       " 'wrong',\n",
+       " 'right',\n",
+       " 'wrong',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'wrong',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'wrong',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right',\n",
+       " 'right']"
+      ]
+     },
+     "execution_count": 191,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_perceptron(train_perceptron('2','3'), train)"
+   ]
   },
   {
    "cell_type": "markdown",
