--- a/perceptron_assignment.ipynb
+++ b/perceptron_assignment.ipynb
@@ -344,24 +344,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cosine_similarity(v1, v2):\n",
-    "    \"\"\"Calculate cosine similarity between two vectors.\n",
-    "    \n",
-    "    Args:\n",
-    "        v1 (np.array): first vector\n",
-    "        v2 (np.array): second vector\"\"\"\n",
-    "    \n",
-    "    score = numpy.dot(v1,v2) / (numpy.linalg.norm(v1) * numpy.linalg.norm(v2))\n",
-    "    return score"
+    "train = load_data('train.data')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,20 +407,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "test = load_data('test.data')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 173,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train = load_data('train.data')"
    ]
   },
   {
@@ -440,23 +423,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'train' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-5a90e1dcf6d2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mdef\u001b[0m \u001b[0mtrain_perceptron\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpositive_label\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'1'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnegative_label\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'2'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmax_iterations\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1000\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmax_updates\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m10000\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtraining_dataset\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtrain\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \"\"\"Train Perceptron on given training dataset.\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mArgs\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[0mtraining_dataset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdict\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mDict\u001b[0m \u001b[1;32mwith\u001b[0m \u001b[0minteger\u001b[0m \u001b[0mkeys\u001b[0m \u001b[0mcontaining\u001b[0m \u001b[0mtuples\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'train' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def train_perceptron(positive_label='1', negative_label='2', max_iterations=1000, max_updates=10000, training_dataset=train):\n",
+    "def train_perceptron(positive_label='1', negative_label='2', max_iterations=10000, max_updates=100000, training_dataset=train):\n",
     "    \"\"\"Train Perceptron on given training dataset.\n",
     "    \n",
     "    Args:\n",
@@ -498,31 +469,119 @@
     "                # ie. if incorrectly classified\n",
     "                w[k+1] = w[k] + y[i]*x\n",
     "                k = k+1\n",
+    "                if k == max_updates:\n",
+    "                    break\n",
+    "        \n",
     "        count_updates[n] = k        \n",
     "        if n>0 and count_updates[n] == count_updates[n-1]:\n",
     "            break\n",
-    "        if k == max_updates:\n",
+    "        if k >= max_updates:\n",
     "            break\n",
     "            \n",
     "    return {'weights':w[k], \n",
     "            'positive_label':positive_label, \n",
     "            'negative_label':negative_label,\n",
     "            'updates':k,\n",
+    "            'w':w,\n",
+    "            'counts':count_updates\n",
     "           }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "p = train_perceptron(max_iterations=20)\n",
+    "q = train_perceptron(max_updates=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: 20}"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q['counts']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: 42,\n",
+       " 1: 84,\n",
+       " 2: 125,\n",
+       " 3: 165,\n",
+       " 4: 205,\n",
+       " 5: 245,\n",
+       " 6: 285,\n",
+       " 7: 325,\n",
+       " 8: 365,\n",
+       " 9: 405,\n",
+       " 10: 445,\n",
+       " 11: 485,\n",
+       " 12: 525,\n",
+       " 13: 565,\n",
+       " 14: 605,\n",
+       " 15: 645,\n",
+       " 16: 685,\n",
+       " 17: 725,\n",
+       " 18: 765,\n",
+       " 19: 805}"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p['counts']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'weights': array([ 177. ,   98. ,  125. , -157.3, -248.4]),\n",
+       " 'positive_label': '2',\n",
+       " 'negative_label': '3',\n",
+       " 'updates': 43195}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train_perceptron('2','3')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,138 +601,85 @@
     "            y[i] = 0\n",
     "    \n",
     "    results = []\n",
+    "    right = 0\n",
+    "    wrong = 0\n",
     "    for i, datum in enumerate(test_dataset):\n",
     "        x = datum[1]\n",
     "        if y[i] == 0:\n",
     "            pass\n",
     "        elif y[i] * w.dot(x) > 0:\n",
     "            results.append('right')\n",
+    "            right += 1\n",
     "        else:\n",
     "#             print(w)\n",
     "#             print(datum)\n",
     "#             print(y[i]*w.dot(x))\n",
     "            results.append('wrong')\n",
-    "    \n",
-    "    return results"
+    "            wrong += 1\n",
+    "    score = right/(right+wrong) * 100\n",
+    "#     print(f'Success rate: {score}%')\n",
+    "#     return results\n",
+    "    return f'Success rate: {score}%'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "30"
+       "('1', array([1. , 5. , 3.5, 1.3, 0.3]))"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(test)"
+    "test[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'wrong',\n",
-       " 'right',\n",
-       " 'wrong',\n",
-       " 'right',\n",
-       " 'wrong',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'wrong',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'wrong',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right',\n",
-       " 'right']"
+       "'Success rate: 100.0%'"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test_perceptron(train_perceptron('2','3'), train)"
+    "test_perceptron(train_perceptron('1','3', max_iterations=20), train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Success rate: 0.0%'"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_perceptron(train_perceptron('2','3', max_updates=20), train)"
    ]
   },
   {
